--- a/style.css
+++ b/style.css
@@ -1,26 +1,34 @@
 *{
-    background-color: rgb(226, 223, 223);
+    /* background-color: rgb(226, 223, 223); */
 }
 .container{
     text-align: center;
     max-width: 500px;
-    margin:auto;
+    margin-left:350px;;
+    background-color:rgb(139, 142, 139);
+    height: 100%;
+    width:100%;
+    padding:40px;
+    /* margin:10px; */
+    border-radius: 20px;
+    border:2px solid  rgb(83, 85, 84);
+    box-shadow: 2px 2px 20px black;
 }
 h1{
     text-align: center;
     font-size: 50px;
 }
 
-.incontainer{
-    background-color: rgb(154, 157, 155);
-    height: 100%;
+/* .incontainer{ */
+    /* background-color: rgb(154, 157, 155); */
+    /* height: 100%;
     width:100%;
     padding:40px;
     margin:10px;
     border-radius: 20px;
     border:2px solid  rgb(83, 85, 84);
     box-shadow: 2px 2px 20px black;
-}
+} */
 .text{
     color:rgb(20, 20, 20);
     /* padding:10px; */
@@ -43,4 +51,11 @@ h1{
     background-color: black;
     border-radius: 7px;
     border:none;
+}
+
+#code-img{
+margin-top:30px;
+height:300px;
+width:300px;
+/* max-width: 100%; */
 }
