--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@
 .container{
     text-align: center;
     max-width: 500px;
-    margin-left:350px;;
+    margin:auto;
     background-color:rgb(139, 142, 139);
-    height: 100%;
-    width:100%;
+    height: 50%;
+    width:60%;
     padding:40px;
     /* margin:10px; */
     border-radius: 20px;
@@ -55,7 +55,7 @@ h1{
 
 #code-img{
 margin-top:30px;
-height:300px;
-width:300px;
+height:30%;
+width:30%;
 max-width: 100%;
 }
